kube/deploy/core/monitoring/victoria/logs/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "victoria-logs-expose"
  annotations:
    coredns.io/hostname: "${APP_DNS_VICTORIA_LOGS_EXPOSE:=victoria-logs-expose"
    lbipam.cilium.io/ips: "${APP_IP_VICTORIA_LOGS_EXPOSE:=127.0.0.1}"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: victoria-logs-single
  ports:
    - name: fortigate-syslog
      port: 51401
      protocol: TCP
