kube/deploy/core/monitoring/victoria/logs/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: victoria-logs
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-logs
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fluentbit
          podSelector:
            matchLabels:
              app.kubernetes.io/name: fluentbit
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vector
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vector
    - from:
        - ipBlock:
            cidr: "${IP_ROUTER_VLAN_K8S:=127.0.0.1}/32"
      ports:
        - port: 51401
          protocol: TCP
